extracted_vulnerabilities/pair_210273_432152/vuln_report.txt
extracted_vulnerabilities/pair_210273_432152/pipeline_d_vuln.cpp:1:1: error: syntax error [syntaxError]
createRandomCursorExecutor(const CollectionPtr& coll,
^
nofile:0:0: information: Active checkers: There was critical errors (use --checkers-report=<filename> to see details) [checkersReport]

